# swiftsim-gui

./: .gitignore  CMakeLists.txt  README.md
include/: SimulationController.h
mock_sim/: params.yaml  timesteps.txt
resources/: images.qrc  styles.qrc
resources/styles/: app.qss
scripts/: plot_csfrd.py  plot_particles.py  plot_updates.py  plot_wall_time.py
src/: CommandLineParser.cpp  CommandLineParser.h  DataWatcher.cpp  DataWatcher.h  DiagTabWidget.cpp  DiagTabWidget.h  HomeTabWidget.cpp  HomeTabWidget.h  ImageProgressWidget.cpp  ImageProgressWidget.h  LogTabWidget.cpp  LogTabWidget.h  MainView.cpp  MainView.h  PlotWidget.cpp  PlotWidget.h  RotationFrameLoader.cpp  RotationFrameLoader.h  ScaledPixmapLabel.cpp  ScaledPixmapLabel.h  SerialHandler.cpp  SerialHandler.h  SimulationController.cpp  StepCounter.cpp  StepCounter.h  StyledSplitter.h  VizTabWidget.cpp  VizTabWidget.h  colormaps.h  main.cpp
